Adds the footer

--- a/index.html
+++ b/index.html
@@ -75,7 +75,13 @@
   </body>
   
   <footer>
-  
+    <ul>
+      <li>&copy; Mai F Nguy, 2017 &#124;</li>
+      <li><a href="https://github.com/maifnguy" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a></li> <!-- add target="_blank" to open in a new tab -->
+      <li><a href="https://www.linkedin.com/in/mai-nguy-27b34233" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+      <li><a href="#" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+      <li><a href="#" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+    </ul>
   </footer>
 </html>
     
