--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Web Dev Fundamentals</title>
     <meta charset="utf-8">
     
     <!-- Google Fonts -->
